2005-04-10  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/guile-gtk-tree-model.c, gnome/gw/gdk-pixbuf-support.c,
	* gnome/gw/gtk-support.c: Use new SCM<->gpointer conversion macros.

2005-03-01  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/gdk-spec.scm (initialize): Added type-rules making
	gint* and guint* output args.

2005-02-28  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/overrides/gdk.defs (gdk_window_set_icon): Added override
	with null-ok options for parameters.

2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-02-17  Andy Wingo  <wingo@pobox.com>

	* package.ac: Follow --disable-deprecation for deprecation cflags.

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2005-01-08  Andy Wingo  <wingo@pobox.com>

	* package.ac (GTK_DEPRECATED_CFLAGS): Add --disable-gtk-deprecated
	as an option, off by default. This is so when new GTK+ versions
	come out with more deprecations, a guile-gtk made for an older
	deprecation level will still compile.

	* gnome/gw/Makefile.am (libgw_guile_gnome_gtk_la_CFLAGS): Use
	$(GTK_DEPRECATED_CFLAGS).

2004-12-06  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.97 ==

	* gnome/gw/gtk-support.c ("guile-gtk-scm-to-tree-path"): Don't
	allow GValues as GtkTreePaths, we shouldn't get them.

	* gnome/gw/gtk-spec.scm: Really updated this time. Don't free the
	tree path, because this code is going into the GValue wrapper as
	well, and we don't know if we own those or not. A memleak for now.

2004-12-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gtk-spec.scm: 
	* gnome/gw/gdk-spec.scm: Updated to use wrap-custom-boxed!.

2004-11-29  Andy Wingo  <wingo@pobox.com>

	* gnome/gtk.scm (progress): New proc. Will display its argument if
	the GUILE_GTK_DEBUG environment var is set, otherwise a noop.

2004-11-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gtk/gdk-event.scm (button-press, button-release): Define